11_DevOps/01_KIMJIHWAN/04_k8s/section02/boot002dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boot002dep
spec:
  selector:
    matchLabels:
      app: boot002kube
  # replicas: 3
  replicas: 1
  template:
    metadata:
      labels:
        app: boot002kube
    spec:
      containers:
      - name: boot-container
        image: ferryla/k8s_boot_ing:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
