11_DevOps/01_KIMJIHWAN/04_k8s/section02/react002ser.yml
apiVersion: v1
kind: Service
metadata:
  name: react002ser
spec:
  type: ClusterIP #NodePort x
  ports:
  - port: 8000
    targetPort: 3000
  selector:
    app: react002kube
